--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -323,8 +323,17 @@
     .text-size120 {
             width: 120px !important;
         }
+    .text-size125 {
+            width: 125px !important;
+        }
+    .text-size123 {
+            width: 123px !important;
+        }
     .text-size130 {
             width: 130px !important;
+        }
+    .text-size135 {
+            width: 135px !important;
         }
     .text-size140 {
             width: 140px !important;
